--- a/judypie.html
+++ b/judypie.html
@@ -524,16 +524,81 @@
                     <div class="pricing-card">
                         <h4 class="pricing-level">Level 1 Detail</h4>
                         <p class="pricing-price">$149</p>
+                        <button class="see-whats-included-btn" data-target="booking-sedan-level1-features">See what's included</button>
+                        <div id="booking-sedan-level1-features" class="feature-dropdown">
+                            <ul class="feature-list">
+                                <li>External high pressure wash</li>
+                                <li>Tire cleaner</li>
+                                <li>Window cleaning inside and out</li>
+                                <li>Deep vaccuming</li>
+                                <li>Display controls and panels wipedown</li>
+                                <li>Mirror cleaning</li>
+                                <li>Seat vaccum</li>
+                                <li>Surface protectent for the dash and display/controls</li>
+                                <li>Steering wheel and dash clean</li>
+                            </ul>
+                        </div>
                         <button class="select-package-btn btn-success" data-package-type="Level 1 Detail" data-package-price="149" data-vehicle-type="car">Select Package</button>
                     </div>
                     <div class="pricing-card">
                         <h4 class="pricing-level">Level 2 Detail</h4>
                         <p class="pricing-price">$249</p>
+                        <button class="see-whats-included-btn" data-target="booking-sedan-level2-features">See what's included</button>
+                        <div id="booking-sedan-level2-features" class="feature-dropdown">
+                            <ul class="feature-list">
+                                <li>External high pressure wash</li>
+                                <li>Tire cleaner</li>
+                                <li>Window cleaning inside and out</li>
+                                <li>Deep vaccuming</li>
+                                <li>Display controls and panels wipedown</li>
+                                <li>Mirror cleaning</li>
+                                <li>Seat vaccum</li>
+                                <li>Surface protectent for the dash and display/controls</li>
+                                <li>Steering wheel and dash clean</li>
+                                <li>Shampoo carpets and seats</li>
+                                <li>Premium Leather treatment</li>
+                                <li>Door jam cleaning</li>
+                                <li>Rims and tires cleaned and wiped down</li>
+                                <li>Console scrub down</li>
+                                <li>Pet hair removal</li>
+                                <li>Odor removal</li>
+                            </ul>
+                        </div>
                         <button class="select-package-btn btn-success" data-package-type="Level 2 Detail" data-package-price="249" data-vehicle-type="car">Select Package</button>
                     </div>
                     <div class="pricing-card">
                         <h4 class="pricing-level">Level 3 Detail</h4>
                         <p class="pricing-price">$349</p>
+                        <button class="see-whats-included-btn" data-target="booking-sedan-level3-features">See what's included</button>
+                        <div id="booking-sedan-level3-features" class="feature-dropdown">
+                            <ul class="feature-list">
+                                <li>External high pressure wash</li>
+                                <li>Tire cleaner</li>
+                                <li>Window cleaning inside and out</li>
+                                <li>Deep vaccuming</li>
+                                <li>Display controls and panels wipedown</li>
+                                <li>Mirror cleaning</li>
+                                <li>Seat vaccum</li>
+                                <li>Surface protectent for the dash and display/controls</li>
+                                <li>Steering wheel and dash clean</li>
+                                <li>Shampoo carpets and seats</li>
+                                <li>Premium Leather treatment</li>
+                                <li>Door jam cleaning</li>
+                                <li>Rims and tires cleaned and wiped down</li>
+                                <li>Console scrub down</li>
+                                <li>Pet hair removal</li>
+                                <li>Odor removal</li>
+                                <li>FINE TOOTH COMB in between seats cleaning</li>
+                                <li>Glove compartment cleaning</li>
+                                <li>Trunk shampoo and vaccum</li>
+                                <li>Door controls cleaning</li>
+                                <li>Hard to reach areas deep level shampoo</li>
+                                <li>Meticulous cleaning of all frequently touched surfaces</li>
+                                <li>External bug removal</li>
+                                <li>Free microfiber cloth</li>
+                                <li>Protection plan (complimentary maintenance clean within 15 days)</li>
+                            </ul>
+                        </div>
                         <button class="select-package-btn btn-success" data-package-type="Level 3 Detail" data-package-price="349" data-vehicle-type="car">Select Package</button>
                     </div>
                 </div>
@@ -542,16 +607,81 @@
                     <div class="pricing-card">
                         <h4 class="pricing-level">Level 1 Detail</h4>
                         <p class="pricing-price">$199</p>
+                        <button class="see-whats-included-btn" data-target="booking-suv-truck-level1-features">See what's included</button>
+                        <div id="booking-suv-truck-level1-features" class="feature-dropdown">
+                            <ul class="feature-list">
+                                <li>External high pressure wash</li>
+                                <li>Tire cleaner</li>
+                                <li>Window cleaning inside and out</li>
+                                <li>Deep vaccuming</li>
+                                <li>Display controls and panels wipedown</li>
+                                <li>Mirror cleaning</li>
+                                <li>Seat vaccum</li>
+                                <li>Surface protectent for the dash and display/controls</li>
+                                <li>Steering wheel and dash clean</li>
+                            </ul>
+                        </div>
                         <button class="select-package-btn btn-success" data-package-type="Level 1 Detail" data-package-price="199" data-vehicle-type="suv-truck">Select Package</button>
                     </div>
                     <div class="pricing-card">
                         <h4 class="pricing-level">Level 2 Detail</h4>
                         <p class="pricing-price">$299</p>
+                        <button class="see-whats-included-btn" data-target="booking-suv-truck-level2-features">See what's included</button>
+                        <div id="booking-suv-truck-level2-features" class="feature-dropdown">
+                            <ul class="feature-list">
+                                <li>External high pressure wash</li>
+                                <li>Tire cleaner</li>
+                                <li>Window cleaning inside and out</li>
+                                <li>Deep vaccuming</li>
+                                <li>Display controls and panels wipedown</li>
+                                <li>Mirror cleaning</li>
+                                <li>Seat vaccum</li>
+                                <li>Surface protectent for the dash and display/controls</li>
+                                <li>Steering wheel and dash clean</li>
+                                <li>Shampoo carpets and seats</li>
+                                <li>Premium Leather treatment</li>
+                                <li>Door jam cleaning</li>
+                                <li>Rims and tires cleaned and wiped down</li>
+                                <li>Console scrub down</li>
+                                <li>Pet hair removal</li>
+                                <li>Odor removal</li>
+                            </ul>
+                        </div>
                         <button class="select-package-btn btn-success" data-package-type="Level 2 Detail" data-package-price="299" data-vehicle-type="suv-truck">Select Package</button>
                     </div>
                     <div class="pricing-card">
                         <h4 class="pricing-level">Level 3 Detail</h4>
                         <p class="pricing-price">$399</p>
+                        <button class="see-whats-included-btn" data-target="booking-suv-truck-level3-features">See what's included</button>
+                        <div id="booking-suv-truck-level3-features" class="feature-dropdown">
+                            <ul class="feature-list">
+                                <li>External high pressure wash</li>
+                                <li>Tire cleaner</li>
+                                <li>Window cleaning inside and out</li>
+                                <li>Deep vaccuming</li>
+                                <li>Display controls and panels wipedown</li>
+                                <li>Mirror cleaning</li>
+                                <li>Seat vaccum</li>
+                                <li>Surface protectent for the dash and display/controls</li>
+                                <li>Steering wheel and dash clean</li>
+                                <li>Shampoo carpets and seats</li>
+                                <li>Premium Leather treatment</li>
+                                <li>Door jam cleaning</li>
+                                <li>Rims and tires cleaned and wiped down</li>
+                                <li>Console scrub down</li>
+                                <li>Pet hair removal</li>
+                                <li>Odor removal</li>
+                                <li>FINE TOOTH COMB in between seats cleaning</li>
+                                <li>Glove compartment cleaning</li>
+                                <li>Trunk shampoo and vaccum</li>
+                                <li>Door controls cleaning</li>
+                                <li>Hard to reach areas deep level shampoo</li>
+                                <li>Meticulous cleaning of all frequently touched surfaces</li>
+                                <li>External bug removal</li>
+                                <li>Free microfiber cloth</li>
+                                <li>Protection plan (complimentary maintenance clean within 15 days)</li>
+                            </ul>
+                        </div>
                         <button class="select-package-btn btn-success" data-package-type="Level 3 Detail" data-package-price="399" data-vehicle-type="suv-truck">Select Package</button>
                     </div>
                 </div>
@@ -943,20 +1073,59 @@
             // Package features for script generation
             const packageFeatures = {
                 "Level 1 Detail": {
-                    "car": ["external and internal wash", "deep clean vacuuming", "doors and panels cleaning"],
-                    "suv-truck": ["external and internal wash", "deep clean vacuuming", "doors and panels cleaning"]
+                    "car": [
+                        "External high pressure wash", "Tire cleaner", "Window cleaning inside and out",
+                        "Deep vaccuming", "Display controls and panels wipedown", "Mirror cleaning",
+                        "Seat vaccum", "Surface protectent for the dash and display/controls", "Steering wheel and dash clean"
+                    ],
+                    "suv-truck": [
+                        "External high pressure wash", "Tire cleaner", "Window cleaning inside and out",
+                        "Deep vaccuming", "Display controls and panels wipedown", "Mirror cleaning",
+                        "Seat vaccum", "Surface protectent for the dash and display/controls", "Steering wheel and dash clean"
+                    ]
                 },
                 "Level 2 Detail": {
                     "car": [
-                        "external and internal wash", "deep clean vacuuming", "shampooing of carpets",
-                        "pet hair removal if you have any", "doors and panels cleaning"
+                        "External high pressure wash", "Tire cleaner", "Window cleaning inside and out",
+                        "Deep vaccuming", "Display controls and panels wipedown", "Mirror cleaning",
+                        "Seat vaccum", "Surface protectent for the dash and display/controls", "Steering wheel and dash clean",
+                        "Shampoo carpets and seats", "Premium Leather treatment", "Door jam cleaning",
+                        "Rims and tires cleaned and wiped down", "Console scrub down", "Pet hair removal", "Odor removal"
                     ],
                     "suv-truck": [
-                        "external and internal wash", "deep clean vacuuming", "shampooing of carpets",
-                        "pet hair removal if you have any", "doors and panels cleaning"
+                        "External high pressure wash", "Tire cleaner", "Window cleaning inside and out",
+                        "Deep vaccuming", "Display controls and panels wipedown", "Mirror cleaning",
+                        "Seat vaccum", "Surface protectent for the dash and display/controls", "Steering wheel and dash clean",
+                        "Shampoo carpets and seats", "Premium Leather treatment", "Door jam cleaning",
+                        "Rims and tires cleaned and wiped down", "Console scrub down", "Pet hair removal", "Odor removal"
+                    ]
+                },
+                "Level 3 Detail": {
+                    "car": [
+                        "External high pressure wash", "Tire cleaner", "Window cleaning inside and out",
+                        "Deep vaccuming", "Display controls and panels wipedown", "Mirror cleaning",
+                        "Seat vaccum", "Surface protectent for the dash and display/controls", "Steering wheel and dash clean",
+                        "Shampoo carpets and seats", "Premium Leather treatment", "Door jam cleaning",
+                        "Rims and tires cleaned and wiped down", "Console scrub down", "Pet hair removal", "Odor removal",
+                        "FINE TOOTH COMB in between seats cleaning", "Glove compartment cleaning", "Trunk shampoo and vaccum",
+                        "Door controls cleaning", "Hard to reach areas deep level shampoo",
+                        "Meticulous cleaning of all frequently touched surfaces", "External bug removal",
+                        "Free microfiber cloth", "Protection plan (complimentary maintenance clean within 15 days)"
+                    ],
+                    "suv-truck": [
+                        "External high pressure wash", "Tire cleaner", "Window cleaning inside and out",
+                        "Deep vaccuming", "Display controls and panels wipedown", "Mirror cleaning",
+                        "Seat vaccum", "Surface protectent for the dash and display/controls", "Steering wheel and dash clean",
+                        "Shampoo carpets and seats", "Premium Leather treatment", "Door jam cleaning",
+                        "Rims and tires cleaned and wiped down", "Console scrub down", "Pet hair removal", "Odor removal",
+                        "FINE TOOTH COMB in between seats cleaning", "Glove compartment cleaning", "Trunk shampoo and vaccum",
+                        "Door controls cleaning", "Hard to reach areas deep level shampoo",
+                        "Meticulous cleaning of all frequently touched surfaces", "External bug removal",
+                        "Free microfiber cloth", "Protection plan (complimentary maintenance clean within 15 days)"
                     ]
                 }
             };
+
 
             const packagePrices = {
                 "Level 1 Detail": { "car": 149, "suv-truck": 199 },
@@ -1610,6 +1779,19 @@
                     showBookingStepName(packageType, packagePrice, vehicleType); 
                 }
             });
+
+            // Universal event listener for "See what's included" buttons
+            document.addEventListener('click', (e) => {
+                if (e.target.classList.contains('see-whats-included-btn')) {
+                    const targetId = e.target.dataset.target;
+                    const dropdown = document.getElementById(targetId);
+                    if (dropdown) {
+                        dropdown.classList.toggle('show');
+                        e.target.textContent = dropdown.classList.contains('show') ? 'Hide details' : "See what's included";
+                    }
+                }
+            });
+
 
             // Event listeners for "Next" buttons in booking steps
             if (elements.btnNextName) elements.btnNextName.addEventListener('click', showBookingStepContact);
