--- a/judypie.html
+++ b/judypie.html
@@ -944,9 +944,8 @@
 
         // The main application logic, including form event listeners.
         function initializeApp() {
-            // Set API_BASE_URL to the explicit backend URL.
-            // This assumes admin_app.py is running on http://localhost:5001.
-            const API_BASE_URL = 'http://localhost:5001'; 
+            // Changed API_BASE_URL to the absolute URL of your backend
+            const API_BASE_URL = 'https://michie-detailing-admin.onrender.com'; 
             
             const elements = {
                 scriptDisplay: document.getElementById('script-display'),
@@ -1199,19 +1198,12 @@
                 }
                 try {
                     const response = await fetch(`${API_BASE_URL}${endpoint}`, options);
-                    // Check if the response is OK (status 200-299) before trying to parse JSON
-                    if (!response.ok) {
-                        const errorText = await response.text(); // Get raw text for better debugging
-                        console.error(`API Call failed: ${response.status} ${response.statusText} - ${errorText}`);
-                        throw new Error(`Server error: ${response.status} ${response.statusText}`);
-                    }
                     const responseText = await response.text();
-                    // Attempt to parse JSON only if responseText is not empty
                     const data = responseText ? JSON.parse(responseText) : {};
                     return { ok: response.ok, data: data, status: response.status };
                 } catch (error) {
                     console.error('API Call Error:', error);
-                    return { ok: false, data: { message: error.message || 'Network error or invalid JSON response.' } };
+                    return { ok: false, data: { message: 'Network error or invalid JSON response.' } };
                 }
             }
             
